# happypose_ros

./: .gitignore  .pre-commit-config.yaml  README.md  happypose_ros.repos  package.xml  setup.py
.github/workflows/: happypose_ros_build_and_test.yaml  ros_test.yaml
happypose_examples/: CMakeLists.txt  package.xml
happypose_examples/config/: camera_info.yaml  cosypose_params.yaml  cosypose_params_multiview.yaml  megapose_params.yaml  webcam_params.yaml
happypose_examples/launch/: common.launch.py  file_image.launch.py  megapose_demo.launch.py  multi_view_demo.launch.py  single_view_demo.launch.py  webcam.launch.py
happypose_examples/resources/meshes/: bar-holder-stripped-bi-v3.mtl
happypose_examples/rviz/: happypose_example.rviz  happypose_multiview_example.rviz
happypose_msgs/: CMakeLists.txt  package.xml
happypose_msgs/examples/: meshcat_viz.ipynb
happypose_msgs/happypose_msgs_py/: symmetries.py
happypose_msgs/msg/: ContinuousSymmetry.msg  ObjectSymmetries.msg  ObjectSymmetriesArray.msg
happypose_msgs/srv/: BlockingPipelieTrigger.srv
happypose_msgs/test/: test_discretize_symmetries.py
happypose_msgs/utils/: conversions.py
happypose_ros/: .gitignore  happypose_node.py  package.xml  setup.cfg  setup.py
happypose_ros/happypose_ros/: camera_wrapper.py  cosypose_loader.py  custom_validation.py  custom_validators.py  happypose_node.py  happypose_ros_parameters.py  happypose_ros_parameters.yaml  inference_pipeline.py  megapose_detector.py  pipeline.py  python_validators.py  utils.py
happypose_ros/test/: happypose_testing_utils.py  single_view_base.py  test_initialization_params.py  test_multi_view.yaml  test_multi_view_integration.py  test_single_view.py  test_single_view.yaml  test_single_view_compressed.py  test_single_view_icp.py  test_single_view_icp.yaml
