<?xml version="1.0"?>
<package format="3">
	<name>happypose_msgs</name>
	<version>0.0.2</version>
	<description>Custom messages used by happypose_ros package.</description>
	<author email="krzysztof.wojciechowski@laas.fr">Krzysztof Wojciechowski</author>
	<maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
	<license>BSD</license>

	<url type="website">https://gitlab.laas.fr/kwojciecho/happypose_ros</url>
	<url type="bugtracker">https://gitlab.laas.fr/kwojciecho/happypose_ros/-/issues</url>
	<url type="repository">https://gitlab.laas.fr/kwojciecho/happypose_ros</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-transforms3d</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
